--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,14 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+
+    implementation 'androidx.activity:activity:1.3.1'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
+//You must use fragment 1.3.0-alpha02 or later
+    implementation 'androidx.fragment:fragment:1.4.0-alpha06'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha06'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
